[package]
name = "bryggio"
version = "0.1.0"
authors = ["Jakob Lindqvist <jakob.lindqvist.92@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.0"
rocket_contrib = { version = "0.4.0", features = ["tera_templates"]}
gpio-cdev = "0.1.0"
onewire = "0.3.10"
rand = "0.6.5"
toml = "0.4.2"
serde = {version = "1.0.89", features = ["derive"]}
serde_json = "1.0.39"
