[package]
name = "bryggio"
version = "0.1.0"
authors = ["Jakob Lindqvist <jakob.lindqvist.92@gmail.com>"]
edition = "2018"
default-run = "bryggio-server"

[dependencies]
rocket = ">=0.4.2"
rocket_contrib = ">=0.4.2"
rocket_cors = "0.5.0"
gpio-cdev = ">=0.2.0"
onewire = ">=0.3.10"
rand = ">=0.7"
rand_distr = ">=0.2.1"
toml = ">=0.5"
serde = {version = ">=1.0.98", features = ["derive"]}
serde_json = ">=1.0.40"
log = ">=0.4.8"
regex = "1"
lazy_static = "1"
# Reqwest is needed for Bryggio CLI,
# It uses OpenSSL, subseq. an ARM version needs to be installed
# for cross-compilation.
#reqwest = "0.9.22"

[dev-dependencies]
assert_approx_eq = "1.1.0"
