[package]
name = "bryggio-cli"
version = "0.2.0"
authors = ["Jacko Jackonelli <jakob.lindqvist.92@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = ">=2"
ureq = ">=2"
structopt = ">=0.3"
# Quote is needed for failure-derive bug fix
# https://users.rust-lang.org/t/failure-derive-compilation-error/39062
quote = ">=1"
bryggio-core = { path = "../bryggio_core" }
serde = {version = ">=1.0", features = ["derive"]}
serde_json = ">=1.0"
log = ">=0.4"
env_logger = ">=0.7"
semver = ">=1.0"
regex = ">=1"
lazy_static = ">=1"
dirs=">=3"
zip=">=0.5"
shellexpand = ">=2"
thiserror=">=1"
