[package]
name = "bryggio-core"
version = "0.2.0"
authors = ["Jakob Lindqvist <jakob.lindqvist.92@gmail.com>"]
edition = "2018"

[dependencies]
embedded-hal = "=1.0.0-alpha.5"
gpio-cdev = "0.5.0"
rand = ">=0.8"
rand_distr = ">=0.2.1"
serde = {version = ">=1.0", features = ["derive"]}
serde_json = ">=1.0"
regex = ">=1.0"
lazy_static = ">=1.0"
pid = ">=3"
async-nats = ">=0.7"
nats = ">=0.7"
derive_more = ">=0.99"
thiserror = ">=1.0"
itertools = ">=0.10"

[target.'cfg(target_arch = "arm")'.dependencies]
linux-embedded-hal = {git = "https://github.com/rust-embedded/linux-embedded-hal", branch = "master", features=["gpio_cdev"]} # This commit works: 0c1a0bbccd5875fe518a8cd41e2bf13d9bd1e130
# linux-embedded-hal = { version = "0.4.0-alpha.0", features = ["gpio_cdev"] }

[dev-dependencies]
assert_approx_eq = ">=1.1"
chrono = ">=0.4"
