[package]
name = "bryggio-core"
version = "0.2.0"
authors = ["Jacko Jackonelli <jakob.lindqvist.92@gmail.com>"]
edition = "2021"

[dependencies]
embedded-hal = "=1.0.0"
# cdev should only be required for rbpi builds.
gpio-cdev = "0.6.0"
rand = ">=0.8"
rand_distr = ">=0.4"
serde = {version = ">=1.0", features = ["derive"]}
serde_json = ">=1.0"
pid = ">=4"
nats = ">=0.24"
derive_more = ">=0.99"
thiserror = ">=1.0"
itertools = ">=0.12"
semver = ">=1.0"
csv = ">=1.0"

[target.'cfg(target_arch = "arm")'.dependencies]
linux-embedded-hal = { version = "0.4.0", features = ["gpio_cdev"] }

[dev-dependencies]
assert_approx_eq = ">=1.1"
chrono = ">=0.4"
