[package]
name = "bryggio-cli"
version = "0.1.0"
authors = ["Jakob <jakob.lindqvist@chalmers.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Reqwest is needed for Bryggio CLI,
# It uses OpenSSL, subseq. an ARM version needs to be installed
# for cross-compilation.
reqwest = "0.9.22"
