[package]
name = "bryggio-cli"
version = "0.1.0"
authors = ["Jakob <jakob.lindqvist@chalmers.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = ">=2"
# Can't use latest version of ureq b/c of ring conflict with rocket
ureq = ">=0.8"
structopt = "0.3.11"
# Quote is needed for failure-derive bug fix
# https://users.rust-lang.org/t/failure-derive-compilation-error/39062
quote = ">=1"
bryggio-lib = { path = "../lib" }
serde = {version = ">=1.0.98", features = ["derive"]}
serde_json = ">=1.0.40"
log = ">=0.4"
env_logger = ">=0.7"
semver = ">=0.9"
regex = ">=1"
lazy_static = ">=1"
