[package]
name = "bryggio-lib"
version = "0.1.0"
authors = ["Jakob Lindqvist <jakob.lindqvist.92@gmail.com>"]
edition = "2018"

[dependencies]
embedded-hal = { version = ">=0.2", features = ["unproven"] }
gpio-cdev = "*"
rand = ">=0.7"
rand_distr = ">=0.2.1"
toml = ">=0.5"
serde = {version = ">=1.0", features = ["derive"]}
serde_json = ">=1.0"
regex = "1"
lazy_static = "1"
pid = ">=2.1"
nats = ">=0.7"
derive_more = ">=0.99"
thiserror = "1.0.22"

[target.'cfg(target_arch = "arm")'.dependencies]
linux-embedded-hal = {git = "https://github.com/rust-embedded/linux-embedded-hal", rev="25bf2be", features=["gpio_cdev"]}

[dev-dependencies]
assert_approx_eq = "1.1.0"
chrono = ">=0.4"
