[package]
name = "bryggio-lib"
version = "0.2.0"
authors = ["Jakob Lindqvist <jakob.lindqvist.92@gmail.com>"]
edition = "2018"

[dependencies]
embedded-hal = "=1.0.0-alpha.4"
gpio-cdev = "0.4.0" # 0.4.0 gives error. Won't update until it's gotten more stable.
embedded-hal-mock = "0.7.1"
rand = ">=0.7"
rand_distr = ">=0.2.1"
toml = ">=0.5"
serde = {version = ">=1.0", features = ["derive"]}
serde_json = ">=1.0"
regex = ">=1.0"
lazy_static = ">=1.0"
pid = ">=3"
async-nats = ">=0.7"
nats = ">=0.7"
derive_more = ">=0.99"
thiserror = ">=1.0"
itertools = ">=0.10"

[target.'cfg(target_arch = "arm")'.dependencies]
linux-embedded-hal = {git = "https://github.com/rust-embedded/linux-embedded-hal", branch = "master", features=["gpio_cdev"]}
# linux-embedded-hal = { version = "0.3", features = ["gpio_cdev"] }

[dev-dependencies]
assert_approx_eq = ">=1.1"
chrono = ">=0.4"
